# iobot

./: Cargo.toml
schemas/: config-prototype.schema.json  config.schema.json
src/: config.rs  generator.rs  init_common.rs  main.rs  runner.rs  utils.rs
src/commands/: generate.rs  init.rs  init_prototype.rs  mod.rs  test.rs
