[package]
name = "iobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
serde = { version = "1.0.130", features=["derive"] }
serde_yaml = "0.8.21"
clap = "3.0.0-beta.5"
dialoguer = "0.9.0"
maplit = "1.0.2"
console = "0.15.0"
